# shizukuRTOS

./: .gitignore  CMakeLists.txt  LICENSE  README.md
boot_loader/: CMakeLists.txt
boot_loader/EFI/: CMakeLists.txt  EfiMain.c  x86_64.cmake
boot_loader/UEFI/: CMakeLists.txt  EfiMain.c  x86_64.cmake
boot_loader/macOS/: CMakeLists.txt  main.c
boot_loader/pico_sdk/: CMakeLists.txt  main.c
boot_loader/unknown/: CMakeLists.txt
configs/: CMakeLists.txt  defalt.cmake
configs/shizuku_config/: CMakeLists.txt
configs/shizuku_config/interface/shizuku_RTOS/: config.hpp
shizuku_kernel/: CMakeLists.txt
shizuku_kernel/config/: CMakeLists.txt
shizuku_kernel/config/interface/shizuku_RTOS/: config.hpp
shizuku_kernel/include/shizuku_kernel/: kernel.hpp  kernel_entry.hpp
shizuku_kernel/interface/shizuku_RTOS/: cpu_managers.hpp  memory_managers.hpp  shizuku_RTOS.hpp  shizuku_boot.h  shizuku_concepts.hpp  shizuku_interface.hpp  shizuku_namespace.hpp  shizuku_type.hpp
shizuku_kernel/interface/shizuku_RTOS/cpu_managers/: RP2040.hpp
shizuku_kernel/interface/shizuku_RTOS/memory_managers/: pico-sdk.hpp  pico_sdk.hpp
shizuku_kernel/interface/shizuku_kernel/: kernel_entry.h
shizuku_kernel/lib/: CMakeLists.txt
shizuku_kernel/lib/UEFI_HEADERS/: CMakeLists.txt
shizuku_kernel/lib/crc32_generator/: CMakeLists.txt  crc32.cpp
shizuku_kernel/lib/crc32_generator/interface/: crc32.hpp
shizuku_kernel/lib/get_set_lib/: CMakeLists.txt
shizuku_kernel/lib/get_set_lib/interface/: getable_getter.hpp  setable_setter.hpp
shizuku_kernel/lib/libc++/: CMakeLists.txt  atexit.cpp
shizuku_kernel/lib/pico_sdk/: CMakeLists.txt
shizuku_kernel/lib/shizuku_concepts/: CMakeLists.txt
shizuku_kernel/lib/shizuku_concepts/interface/: get_set.hpp  same_type.hpp
shizuku_kernel/src/: CMakeLists.txt  init.cpp  kernel.cpp  process.cpp  typecheck.cpp
shizuku_kernel/src/CPU_controller/RP2040/: CMakeLists.txt  add_thread.cpp  context_switch.cpp  init.cpp
shizuku_kernel/src/CPU_controller/RP2040/include/shizuku_RTOS/: cpu_manager.hpp
shizuku_kernel/src/CPU_controller/x86_64/: CMakeLists.txt  contextswitch.cpp  cpu_manager.cpp
shizuku_kernel/src/CPU_controller/x86_64/include/shizuku_RTOS/: context_manager.hpp  cpu_manager.hpp
shizuku_kernel/src/context_switch/: CMakeLists.txt
shizuku_kernel/src/context_switch/x86_64/: CMakeLists.txt  contextswitch.cpp
shizuku_kernel/src/context_switch/x86_64/include/shizuku_RTOS/: context_manager.hpp
shizuku_kernel/src/cpu_manager/RP2040/: CMakeLists.txt  add_thread.cpp  context_switch.cpp  init.cpp
shizuku_kernel/src/cpu_manager/unknown/: CMakeLists.txt
shizuku_kernel/src/kprintf/: CMakeLists.txt
shizuku_kernel/src/memory_controller/: CMakeLists.txt
shizuku_kernel/src/memory_controller/pico_sdk/: CMakeLists.txt  memcontrl.cpp
shizuku_kernel/src/memory_controller/pico_sdk/interface/shizuku_RTOS/: memory_controller.hpp
src/: CMakeLists.txt
src/arm32_cpu_manager/: CMakeLists.txt  arm32_cpu_manager.ld  context_manager.c  process_manager.c
src/arm32_cpu_manager/headers/: context_manager  context_manager.h  process_manager.h
src/arm32_cpu_manager/interface/shizukuRTOS/: context.h  process.h
src/fatalError/: CMakeLists.txt  fatalError.c
src/fatalError/include/shizukuRTOS/: fatalError.h
test/: CMakeLists.txt  test.c
toolchains/: X64-EFI.cmake  X64-macOS.cmake  rasberry-Pi-pico-Pico_SDK.cmake
