cmake_minimum_required(VERSION 3.26)
project(shizuku_kernel CXX)
add_library(shizuku_kernel STATIC)
add_subdirectory(src)
add_subdirectory(lib)
add_subdirectory(config)
target_include_directories(shizuku_kernel PUBLIC interface)
target_precompile_headers(shizuku_kernel PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/interface/shizuku_RTOS/shizuku_RTOS.hpp)