project(shizuku_config CXX)
add_library(${PROJECT_NAME} INTERFACE)
target_include_directories(${PROJECT_NAME} INTERFACE interface)
target_compile_definitions(${PROJECT_NAME} INTERFACE USE_SHIZUKU_CONFIG_CMAKE=1)
target_compile_definitions(${PROJECT_NAME} INTERFACE SHIZUKU_SYSTEM_PROCESSOR=${SHIZUKU_SYSTEM_PROCESSOR})
target_compile_definitions(${PROJECT_NAME} INTERFACE shizuku_context_manager=${shizuku_context_manager})
target_link_libraries(shizuku_kernel PUBLIC ${PROJECT_NAME})