if(${SHIZUKU_PLATFORM_NAME} STREQUAL "UEFI")
add_subdirectory(UEFI_HEADERS)
target_link_libraries(shizuku_kernel PRIVATE UEFI_HEADERS)
endif()
add_subdirectory(get_set_lib)
target_link_libraries(shizuku_kernel PUBLIC get_set_lib)
add_subdirectory(libc++)
target_link_libraries(shizuku_kernel PUBLIC shziuku_libc++)