if(${SHIZUKU_PLATFORM_NAME} STREQUAL "UEFI")
add_subdirectory(UEFI_HEADERS)
target_link_libraries(shizuku_kernel PRIVATE UEFI_HEADERS)
endif()
if(${SHIZUKU_PLATFORM_NAME} STREQUAL "pico_sdk")
add_subdirectory(pico_sdk)
endif()
add_subdirectory(get_set_lib)
target_link_libraries(shizuku_kernel PUBLIC get_set_lib)
add_subdirectory(crc32_generator)