cmake_minimum_required(VERSION 3.27)
project(UEFI_HEADERS C CXX)
add_library(${PROJECT_NAME} INTERFACE)
target_include_directories(${PROJECT_NAME} INTERFACE interface)
if(${SHIZUKU_SYSTEM_PROCESSOR} STREQUAL x86_64)
  target_include_directories(${PROJECT_NAME} INTERFACE interface/X64)
endif(${SHIZUKU_SYSTEM_PROCESSOR} STREQUAL x86_64)
